Refactor tests in FileServiceTest, PostServiceTest, and SecretServiceTest for clarity and consistency